--- a/chatbot/package.json
+++ b/chatbot/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.2.1",
+    "ai": "^4.1.54",
     "next": "15.2.1",
-    "openai": "^4.86.2",
+    "openai": "^4.87.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
