--- a/chatbot/package.json
+++ b/chatbot/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.2.1",
+    "@ai-sdk/react": "^1.1.21",
     "ai": "^4.1.54",
     "next": "15.2.1",
     "openai": "^4.87.1",
